--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -56,10 +56,10 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 25px;
-    border-radius: 5px;
-    border: 0;
+    border: none;
     outline: none;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .gpt3__navbar-menu {
@@ -131,3 +131,4 @@
         display: block;
     }
 }
+
