--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -25,7 +25,7 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 27px;
-    color: var(__color-text);
+    color: var(--color-text);
 
     margin-top: 1.5rem;
 }
